# onboarding-api

./: Cargo.toml  pm2-launch.config.js
api/: Cargo.toml
api/src/: db_helpers.rs  error.rs  fee_grants.rs  main.rs  tx_indexer.rs
api/src/types/: grants.rs  mod.rs
entities/: Cargo.toml
entities/src/: events_info.rs  events_tx.rs  lib.rs  log.rs  mod.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
migration/src/entities/: events_info.rs  events_tx.rs  mod.rs
